# t8-client

./: .env  .gitignore  README.md  pyproject.toml
functions/: save_to_csv.py  subcommands.py  timestamp.py
src/t8-client/: main.py
src/t8_client/: main.py
src/t8_client/functions/: save_to_csv.py  subcommands.py  timestamp.py
tests/: test_timestamp.py
