[project]
name = "t8-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Clara",email = "clara.rglez36@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = ">=2.2.4,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"

[tool.poetry]
packages = [{include = "t8_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
