[project]
name = "t8-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Clara",email = "clara.rglez36@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
numpy = ">=2.2.4,<3.0.0"
matplotlib = ">=3.10.1,<4.0.0"
requests = "^2.28"
python-dotenv = "^1.0.1"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"

[tool.poetry]
packages = [{include = "t8_client", from = "src"}]

[tool.poetry.scripts]
t8-client = "t8_client.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
lint.select = [
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear - common bugs and anti-patterns
    "C90", # McCabe complexity
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "NPY", # flake8-numpy
    "PL",  # pylint
    "Q",   # flake8-quotes
    "RET", # flake8-return
    "RUF", # ruff-specific, import optimization and other inefficiencies
    "SIM", # flake8-simplify
    "UP",  # pyupgradej
    "W",   # pycodestyle
    "ANN", # flake8-annotations - Consistent type annotations
    # "D", # pydocstyle
    # "EM", # flake8-errmsg
    # "ERA", # flake8-eradicate - remove commented out code
    # "PT",  # flake8-pytest-style
    # "S", # flake8-bandit - security checks
    # "SLF", # flake8-self - private member access
]